--- a/.github/workflows/sync_to_hf.yml
+++ b/.github/workflows/sync_to_hf.yml
@@ -20,7 +20,7 @@ jobs:
           HF_USERNAME: "aakashv100"
           HF_SPACE: "gradcam_demo"
         run: |
-          git config --global user.email "vardhan.aakash1@gmail.com"
+          git config --global user.email vardhan.aakash1@gmail.com
           git config --global user.name "aakashvardhan"
           git remote add space https://huggingface.co/spaces/${{ env.HF_USERNAME }}/${{ env.HF_SPACE }}
           git push --force space main
