--- a/.github/workflows/sync_to_hf.yml
+++ b/.github/workflows/sync_to_hf.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git pull && git push https://aakashv100:$HF_TOKEN@huggingface.co/spaces/aakashv100/gradcam_demo main
+        run: git push https://aakashv100:$HF_TOKEN@huggingface.co/spaces/aakashv100/gradcam_demo
